# media_finder

./: CMakeLists.txt  README.md
src/: HttpServer.cpp  HttpServer.hpp  Scanner.cpp  Scanner.hpp  main.cpp
